# turingmind-mcp

./: .gitignore  BRIDGE_SERVER.md  CHANGELOG.md  CODE_REVIEW.md  COMPLETION_SUMMARY.md  GRAPH_GENERATION_TEST_RESULTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_OVERVIEW.md  IMPLEMENTATION_STATUS.md  LICENSE  MCP_IMPLEMENTATION_PROGRESS.md  QUICK_START.md  QUICK_START_BRIDGE.md  README.md  TEST_RUN_INSTRUCTIONS.md  docker-compose.yml  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  reconstruct_prompt.py  reconstruct_prompt_from_db.py  run_local_mcp.sh  run_mcp_server.sh  test_agent_direct.py  test_graph_comprehensive.py  test_graph_generation.py  test_graph_simple.py  test_improvements.py  test_mcp_local.py  test_mcp_tool.py
.agents/rules/: turingmind-governance.md
.agents/skills/constraint_graph/: SKILL.md
.agents/skills/turingmind/: SKILL.md
.agents/workflows/: day1_hydration.md  implement_feature.md  turingmind.md
.cursor/: mcp.json
.github/workflows/: publish.yml
docs/: AGENT_IMPLEMENTATION_TDD.md  ARCHITECTURE_DIAGRAM.md  COMPATIBILITY_MATRIX.md  DEVELOPMENT.md  FEATURES.md  INTEGRATION_ASSESSMENT.md  INTEGRATION_TEST_RESULTS.md  LLM_INPUT_DATA_ANALYSIS.md  MCP_APPLY_EDIT_DATETIME_FIX.md  PENDING_TASKS.md  README.md  REVIEW.md  TDD_SDD_WORKFLOW.md  TESTING_GUIDE.md
scripts/: add_pending_features.py  install-launchd.sh  migrate_features_repo.py  post-ci-observation.sh  run-api-server.sh  setup-claude-cli.sh  setup-claude-desktop.sh  setup-cursor.sh  smoke-memory.sh  turingmind-install.sh
src/turingmind_mcp/: __init__.py  api_server.py  auto_review_service.py  branch_recall.py  bridge_server.py  chat_capture.py  chat_observation_poller.py  cli.py  cloud_memory_client.py  config_manager.py  control_plane.py  cursor_database_reader.py  daemon_setup.py  database.py  db_migration.py  db_paths.py  entity_indexer.py  errors.py  git_churn.py  git_context.py  http_call.py  json_helper.py  memory_distillation.py  memory_effectiveness_assess.py  memory_embeddings.py  memory_manager.py  memory_ranker.py  memory_vec_index.py  models.py  observation_capture.py  observation_clustering.py  profile_config.py  recall_bundle.py  recall_delivery.py  reconcile.py  secret_scrub.py  server.py  session_lifecycle.py  sqlite_guard.py  subsystem_config.py  (+8 more)
src/turingmind_mcp/agents/: __init__.py  base_agent.py  chat_analysis_agent.py
src/turingmind_mcp/client/: __init__.py  async_client.py  client.py
src/turingmind_mcp/llm/: __init__.py  azure_openai.py  config.py  provider.py
src/turingmind_mcp/parsers/: __init__.py  javascript_parser.py  python_parser.py  tree_sitter_manager.py  typescript_parser.py
src/turingmind_mcp/tools/: __init__.py  auth.py  auto_plan.py  chat_analysis.py  code_index.py  code_review.py  context.py  edit_tools.py  login.py  memory.py
src/turingmind_mcp/v2_engine/: __init__.py  database.py  handlers.py  models.py  postgres.py  security_scanner.py  tool_registry.py
templates/: claude_desktop_config.json  cursorrules-reasoning.md  cursorrules-simple.md  cursorrules-tdd.md  mcp.json
templates/cursor/: mcp.json
tests/: TEST_PLAN_CONTROL_PLANE.md  __init__.py  conftest.py  test_api_memory_pull_ci.py  test_bidirectional_sync.py  test_branch_ci.py  test_branch_context.py  test_branch_lifecycle.py  test_branch_recall.py  test_branch_spec.py  test_branch_sync.py  test_bridge_server_chat_capture.py  test_chat_capture.py  test_chat_capture_integration.py  test_client.py  test_cloud_memory_client.py  test_codex_hook_retry.py  test_config_manager.py  test_cp_chat_attrib.py  test_cp_concurrency.py  test_cp_control_plane.py  test_cp_delta.py  test_cp_gatekeeper.py  test_cp_pager.py  test_cp_pass10.py  test_cp_queue_triage.py  test_cp_ranker.py  test_cp_session.py  test_cp_session_gc.py  test_cp_spool.py  test_cp_subsystem_config.py  test_cp_sync_bundle.py  test_cursor_database_reader.py  test_database.py  test_database_chat_state.py  test_errors.py  test_git_churn.py  test_git_invalidation.py  test_handle_sync_cloud.py  test_integration.py  (+32 more)
tests/agents/: __init__.py  test_base_agent.py  test_chat_analysis_agent.py  test_chat_analysis_agent_diffs.py  test_chat_analysis_agent_passing.py
tests/llm/: test_provider.py
