[project]
name = "turingmind-mcp"
version = "0.3.0"
description = "MCP server for TuringMind cloud - provides type-safe tools for authentication, code reviews, and feedback"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "TuringMind", email = "support@turingmind.ai" }
]
maintainers = [
    { name = "TuringMind Team", email = "support@turingmind.ai" }
]
keywords = [
    "mcp",
    "turingmind",
    "code-review",
    "ai",
    "claude",
    "anthropic",
    "model-context-protocol",
    "security",
    "static-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
vec = [
    "sqlite-vec>=0.1.6",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
turingmind-mcp = "turingmind_mcp.server:main"
turingmind-store-reasoning = "turingmind_mcp.cli:main"
turingmind = "turingmind_mcp.unified_cli:main"

[project.urls]
Homepage = "https://turingmind.ai"
Documentation = "https://docs.turingmind.ai/mcp"
Repository = "https://github.com/turingmindai/turingmind-mcp"
Issues = "https://github.com/turingmindai/turingmind-mcp/issues"
Changelog = "https://github.com/turingmindai/turingmind-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/turingmind_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "tier_a: Tier A signal quality tests",
    "tier_b: Tier B funnel capture tests",
    "tier_c: Tier C reconcile extension tests",
    "tier_d: Tier D durability and cloud sync tests",
    "tier_e2e: End-to-end memory funnel tests",
    "meta: Catalog and harness integrity tests",
]
